first aproach, work most of feature

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -4,7 +4,9 @@ depends:
     production_route
 extras_depend:
     stock_supply_production
+    purchase_request
 xml:
     configuration.xml
     operation.xml
     message.xml
+    purchase.xml
